# MyPersonalWebSite

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mysite/: main.py  routes.py  views.py
mysite/templates/: chistolife.html  djangomarket.html  index.html
nginx/: Dockerfile  main_app.conf  nginx.conf
web/: Dockerfile
web/mysite/: main.py  routes.py  views.py
web/mysite/static/css/: style.css
web/mysite/templates/: apiwallet.html  chistolife.html  djangomarket.html  index.html  mypersonalwebsite.html
